# OS

HelloWorld/: CMakeLists.txt  README.md  build.cmd  build.sh  main.cpp
ProcessManager/: CMakeLists.txt  README.md  background.cpp  background.hpp  main.cpp
lab_3/: README.md  main.cpp
lab_4/: device_simulator.cpp  temperature_logger.cpp
lab_5/: README.md  http_server.cpp  web_app.py
lab_5/templates/: dashboard.html
